Elixir basic setup, SASS directory structure, most common variables from Bootstrap

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,4 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
+@import "helpers/variables";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "helpers/mixins";
+@import "helpers/base";
