--- a/resources/assets/sass/helpers/_variables.scss
+++ b/resources/assets/sass/helpers/_variables.scss
@@ -5,17 +5,17 @@
 //** Background color for `<body>`.
 $body-bg: #fff !default;
 //** Global text color on `<body>`.
-$text-color: $gray-dark !default;
+$text-color: #333 !default;
 
 //** Global textual link color.
-$link-color: $brand-primary !default;
+$link-color: #337ab7 !default;
 //** Link hover color set via `darken()` function.
 $link-hover-color: darken($link-color, 15%) !default;
 //** Link hover decoration.
 $link-hover-decoration: underline !default;
 
 // Basics of a navbar
-$navbar-margin-bottom: $line-height-computed !default;
+$navbar-margin-bottom: 20px !default;
 $navbar-default-color: #777 !default;
 $navbar-default-bg: #f8f8f8 !default;
 
@@ -29,4 +29,4 @@ $navbar-default-link-disabled-color: #ccc !default;
 $navbar-default-link-disabled-bg: transparent !default;
 
 //** Point at which the navbar becomes uncollapsed.
-$grid-float-breakpoint: $screen-sm-min !default;
+$grid-float-breakpoint: 768px !default;
